--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -7,8 +7,22 @@
              xmlns:vm="clr-namespace:HighLandirect.ViewModels"
              xmlns:Converters="clr-namespace:HighLandirect.Converters" mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:CustomerViewModel}"
-             MinWidth="200" MinHeight="50">
-    <Grid >
+             MinWidth="200" MinHeight="50"
+             Background="#FF87B2F3" BorderBrush="#FF87B2F3">
+    <UserControl.Resources>
+        <Style TargetType="Label">
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="FontSize" Value="20" />
+        </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="20" />
+        </Style>
+    </UserControl.Resources>
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
@@ -30,73 +44,77 @@
         <Label Content="顧客番号" Grid.Column="0" Grid.Row="0" />
         <TextBox Text="{Binding Customer.CustNo, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="4" Grid.Column="1" HorizontalAlignment="Stretch" FontSize="16" Margin="0,11,0,0" Width="111" />
+                 MaxLength="4" Grid.Column="1" HorizontalAlignment="Stretch" 
+                 IsReadOnly="True" Background="LightGray" />
 
         <Label Content="氏名" Grid.Column="0" Grid.Row="1" />
         <f:YomiganaWPFTextBox x:Name="CustName" Text="{Binding Customer.CustName, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="30" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" 
-                              BindingControl="Furigana" MinWidth="100" Height="30" Margin="0,14,0,0" FontSize="16" />
+                              BindingControl="Furigana" MinWidth="100" FontSize="18" />
 
         <Label Content="ふりがな" Grid.Column="0" Grid.Row="2" />
         <TextBox Name="Furigana" Text="{Binding Customer.Furigana, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" FontSize="16" Margin="0,11,0,0" Width="111" />
+                 MaxLength="30" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" FontSize="16"  />
         <TextBox Text="{Binding Customer.Keisho, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="1" Grid.Column="2" Grid.Row="1" MinWidth="30" FontSize="16" Grid.ColumnSpan="2" Margin="11,11,0,0" Width="20" />
+                 MaxLength="1" Grid.Column="2" Grid.Row="1" MinWidth="30" FontSize="16" Grid.ColumnSpan="1" Margin="2,0,0,0"  />
 
         <Label Content="郵便番号" Grid.Column="3" />
         <TextBox Name="PostalCD" Text="{Binding Customer.PostalCD, Converter={x:Static Converters:PostalCdConverter.Default}, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129">
+                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" >
         </TextBox>
 
         <Label Content="市町村名" Grid.Column="3" Grid.Row="1" />
         <TextBox Text="{Binding Customer.CityName, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" DataContext="{Binding}" />
 
         <Label Content="住所１" Grid.Column="3" Grid.Row="2" />
         <TextBox Name="Address1" Text="{Binding Customer.Address1, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}"/>
+        <Label Content="住所２" Grid.Column="3" Grid.Row="3" />
         <TextBox Text="{Binding Customer.Address2, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="3" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="3" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+        <Label Content="住所３" Grid.Column="3" Grid.Row="4" />
         <TextBox Text="{Binding Customer.Address3, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
+        <Label Content="住所４" Grid.Column="3" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Address4, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129" />
+                 MaxLength="200" Grid.Column="4" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}" />
 
         
         <Label Content="電話番号" Grid.Row="4" />
         <TextBox Text="{Binding Customer.Phone, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="13" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="111" />
+                 MaxLength="13" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
 
         <Label Content="FAX" Grid.Row="5" />
         <TextBox Text="{Binding Customer.Fax, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="12" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="111" />
+                 MaxLength="12" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Stretch" DataContext="{Binding}" />
 
-        <CheckBox Grid.Row="6" Grid.Column="3" Content="ラベル" IsChecked="{Binding Customer.Label}" Height="25" Margin="0,11,0,0" FontSize="14" />
-        <CheckBox Grid.Row="6" Grid.Column="4" Content="顧客一覧に出さない" IsChecked="{Binding Customer.Delete}" Height="25" Margin="0,11,0,0" FontSize="14" />
+        <CheckBox Grid.Row="6" Grid.Column="3" Content="ラベル" IsChecked="{Binding Customer.Label}" VerticalAlignment="Center" VerticalContentAlignment="Center" />
+        <CheckBox Grid.Row="6" Grid.Column="4" Content="顧客一覧に出さない" IsChecked="{Binding Customer.Delete}" VerticalAlignment="Center" VerticalContentAlignment="Center" />
         
         <Label Content="メールアドレス" Grid.Row="6" />
         <TextBox Text="{Binding Customer.MailAddress, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="111" />
+                 MaxLength="200" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Stretch" DataContext="{Binding}" />
         
         <Label Content="メモ" Grid.Row="8" />
         <TextBox Text="{Binding Customer.Memo, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="378" />
+                 MaxLength="200" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="4" HorizontalAlignment="Stretch" DataContext="{Binding}" />
         <Label Content="最終荷主日" Grid.Row="7" Grid.Column="0"/>
-        <TextBox MaxLength="200" Text="{Binding Customer.LatestSend, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="1" Grid.Row="7" FontSize="16" Margin="0,11,0,0" Width="111" />
+        <TextBox MaxLength="200" Text="{Binding Customer.LatestSend, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="1" Grid.Row="7" />
         <Label Content="最終宛先日" Grid.Row="7" Grid.Column="3"/>
-        <TextBox MaxLength="200" Text="{Binding Customer.LatestResceive, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="4" Grid.Row="7" FontSize="16" />
+        <TextBox MaxLength="200" Text="{Binding Customer.LatestResceive, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" Grid.Column="4" Grid.Row="7" />
     </Grid>
 </UserControl>
