--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -1,11 +1,16 @@
 ﻿<UserControl x:Class="HighLandirect.Views.CustomerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:f="clr-namespace:Microsoft.International.Windows.Controls;assembly=YomiganaWPFTextBox"
              xmlns:vm="clr-namespace:HighLandirect.ViewModels"
-             xmlns:Converters="clr-namespace:HighLandirect.Converters" mc:Ignorable="d"
+             xmlns:v="clr-namespace:HighLandirect.Views"
+             xmlns:b="clr-namespace:Livet.Behaviors;assembly=Livet"
+             xmlns:l="clr-namespace:Livet.Behaviors.Messaging;assembly=Livet"
+             xmlns:Converters="clr-namespace:HighLandirect.Converters"
+             mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:CustomerViewModel}"
              MinWidth="200" MinHeight="50"
              Background="#FF87B2F3" BorderBrush="#FF87B2F3">
@@ -65,6 +70,11 @@
         <TextBox Name="PostalCD" Text="{Binding Customer.PostalCD, Converter={x:Static Converters:PostalCdConverter.Default}, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                  MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="KeyUp">
+                    <b:LivetCallMethodAction MethodTarget="{Binding}" MethodName="PostalCDTextBox_KeyUp" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </TextBox>
 
         <Label Content="市町村名" Grid.Column="3" Grid.Row="1" />
@@ -75,7 +85,16 @@
         <Label Content="住所１" Grid.Column="3" Grid.Row="2" />
         <TextBox Name="Address1" Text="{Binding Customer.Address1, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}"/>
+                 MaxLength="200" Grid.Column="4" Grid.Row="2" HorizontalAlignment="Stretch" DataContext="{Binding}">
+            <i:Interaction.Triggers>
+                <l:InteractionMessageTrigger Messenger="{Binding Messenger}" MessageKey="SetFocus">
+                    <b:SetFocusAction />
+                </l:InteractionMessageTrigger>
+                <l:InteractionMessageTrigger Messenger="{Binding Messenger}" MessageKey="MoveCaretToEnd">
+                    <v:MoveCaretToEndAction />
+                </l:InteractionMessageTrigger>
+            </i:Interaction.Triggers>
+        </TextBox>
         <Label Content="住所２" Grid.Column="3" Grid.Row="3" />
         <TextBox Text="{Binding Customer.Address2, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
