送り主を最初に指定し、以降固定するよう修正

--- a/HighLandirect/Views/OrderListView.xaml
+++ b/HighLandirect/Views/OrderListView.xaml
@@ -7,6 +7,7 @@
              xmlns:Properties="clr-namespace:HighLandirect.Properties"
              xmlns:c="clr-namespace:HighLandirect.Converters"
              xmlns:ViewModels="clr-namespace:HighLandirect.ViewModels"
+             xmlns:v="clr-namespace:HighLandirect.Views"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance ViewModels:OrderListViewModel}"
              Background="#FF87B2F3" BorderBrush="#FF87B2F3">
@@ -34,21 +35,23 @@
         </ToolBarTray>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="600"/>
+                <ColumnDefinition Width="900"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="260"/>
+                <RowDefinition Height="525"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <DataGrid ItemsSource="{Binding Orders}" SelectedItem="{Binding SelectedOrder}" 
                          AutoGenerateColumns="False" AlternationCount="1"
-                         CanUserAddRows="False" FontSize="16">
+                         CanUserAddRows="False" FontSize="16" HorizontalScrollBarVisibility="Auto">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterSend.CustNo}" Header="顧客番号" Width="60" IsReadOnly="True"/>
-                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterSend.CustName}" Header="氏名" Width="150" IsReadOnly="True"/>
                     <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.CustNo}" Header="顧客番号" Width="60" IsReadOnly="True"/>
                     <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.CustName}" Header="氏名" Width="150" IsReadOnly="True"/>
+                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.PostalCD}" Header="郵便番号" Width="100"/>
+                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.CityName}" Header="市町村名" Width="100"/>
+                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.Address1}" Header="住所１" Width="150"/>
+                    <DataGridTextColumn Binding="{Binding Order.CustomerMasterReceive.Address2}" Header="住所２" Width="150"/>
 
                     <DataGridTemplateColumn Header="品物" Width="100">
                         <DataGridTemplateColumn.CellTemplate>
@@ -65,58 +68,61 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <Grid Grid.Column="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="20" />
-                    <RowDefinition Height="30" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.Resources>
-                    <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
-                        <Setter Property="FontSize" Value="18" />
-                        <Setter Property="Foreground" Value="White" />
-                    </Style>
-                    <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
-                        <Setter Property="FontSize" Value="18" />
-                        <Setter Property="Foreground" Value="White" />
-                    </Style>
-                    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-                        <Setter Property="FontSize" Value="18" />
-                    </Style>
-                    <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
-                        <Setter Property="FontSize" Value="18" />
-                    </Style>
-                </Grid.Resources>
-                <ComboBox Width="120" Grid.ColumnSpan="2" HorizontalAlignment="Left"
-                          ItemsSource="{Binding Source={StaticResource storeDataProvider}}"
-                          SelectedItem="{Binding SelectedStore}" DisplayMemberPath="StoreName"/>
-                <CheckBox IsChecked="{Binding SelectedStore.IsDefault}" Content="既定" Grid.Column="1"
-                          VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBlock Text="発店コード" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" />
-                <TextBox Text="{Binding SelectedStore.StoreId1}" Grid.Row="2" MinWidth="10" />
-                <TextBox Text="{Binding SelectedStore.StoreId2}" Grid.Row="2" Grid.Column="1" MinWidth="10" />
+            <StackPanel Grid.Column="1">
+                <v:CustomerView Grid.Row="0" Grid.Column="0" DataContext="{Binding SendCustomerViewModel}" Height="350" Padding="0,0,0,10" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="160"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="20" />
+                        <RowDefinition Height="30" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.Resources>
+                        <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
+                            <Setter Property="FontSize" Value="18" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Style>
+                        <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+                            <Setter Property="FontSize" Value="18" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Style>
+                        <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                            <Setter Property="FontSize" Value="18" />
+                        </Style>
+                        <Style TargetType="ComboBox" BasedOn="{StaticResource {x:Type ComboBox}}">
+                            <Setter Property="FontSize" Value="18" />
+                        </Style>
+                    </Grid.Resources>
+                    <ComboBox Width="120" Grid.ColumnSpan="2" HorizontalAlignment="Left"
+                              ItemsSource="{Binding Source={StaticResource storeDataProvider}}"
+                              SelectedItem="{Binding SelectedStore}" DisplayMemberPath="StoreName"/>
+                    <CheckBox IsChecked="{Binding SelectedStore.IsDefault}" Content="既定" Grid.Column="1"
+                              VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                    <TextBlock Text="発店コード" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" />
+                    <TextBox Text="{Binding SelectedStore.StoreId1}" Grid.Row="2" MinWidth="10" />
+                    <TextBox Text="{Binding SelectedStore.StoreId2}" Grid.Row="2" Grid.Column="1" MinWidth="10" />
             
-                <TextBlock Text="お客様番号" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" />
-                <TextBox Text="{Binding SelectedStore.CustomerCD}" Grid.Column="2" Grid.Row="2"   />
+                    <TextBlock Text="お客様番号" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" />
+                    <TextBox Text="{Binding SelectedStore.CustomerCD}" Grid.Column="2" Grid.Row="2"   />
             
-                <ComboBox Width="120" Grid.Row="4" HorizontalAlignment="Left"
-                          ItemsSource="{Binding Source={StaticResource reportMemoDataProvider}}"
-                          DisplayMemberPath="MemoName"
-                          SelectedItem="{Binding SelectedReportMemo}" />
-                <CheckBox IsChecked="{Binding SelectedReportMemo.IsDefault}" Content="既定" Grid.Row="4" Grid.Column="1"
-                          VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                <TextBox Text="{Binding SelectedReportMemo.ReportMemo1}" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4"
-                         TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" />
-            </Grid>
+                    <ComboBox Width="120" Grid.Row="4" HorizontalAlignment="Left"
+                              ItemsSource="{Binding Source={StaticResource reportMemoDataProvider}}"
+                              DisplayMemberPath="MemoName"
+                              SelectedItem="{Binding SelectedReportMemo}" />
+                    <CheckBox IsChecked="{Binding SelectedReportMemo.IsDefault}" Content="既定" Grid.Row="4" Grid.Column="1"
+                              VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                    <TextBox Text="{Binding SelectedReportMemo.ReportMemo1}" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4"
+                             TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" />
+                </Grid>
+            </StackPanel>
             <GridSplitter HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Height="4" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
             <StackPanel Grid.Row="1" Grid.ColumnSpan="2" >
                 <ToolBarTray >
